--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -72,7 +72,7 @@
 		
 		<section id="education">
 			<h2>Education 學歷</h2>
-			<p><span itemprop="alumniOf">New Taipei City High School</span> graduate of 2009.</p>
+			<p><span itemprop="alumniOf">New Taipei City Zhong Shan High School</span> graduate of 2009.</p>
 		</section>
 		
 		<section id="experience">
