Update web page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div id="photo">
-				<img src="images/eric4.jpg" alt="Junting Wu avatar" itemprop="image" />
+				<img src="images/IMAG0096.jpg" alt="Junting Wu avatar" itemprop="image" />
 			</div>
 		</header>
 		
@@ -72,7 +72,7 @@
 		
 		<section id="education">
 			<h2>Education 學歷</h2>
-			<p><span itemprop="alumniOf">New Taipei City Zhong Shan High School</span> graduate of 2009.</p>
+			<p><span itemprop="alumniOf">Editing...</span>....</p>
 		</section>
 		
 		<section id="experience">
