--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+"<"!doctype html>
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div id="photo">
-				<img src="images/IMAG0096.jpg" alt="Junting Wu avatar" itemprop="image" />
+				<img src="images/IMAG0096.jpg" alt="Junting Wu avatar" itemprop="image" height="42" width="42"/>
 			</div>
 		</header>
 		
