Update web page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div id="photo">
-				<img src="images/IMAG0096.jpg" alt="Junting Wu avatar" itemprop="image" height="42" width="42"/>
+				<img src="images/IMAG0096.jpg" alt="Junting Wu avatar" itemprop="image" height="50%" width="50%"/>
 			</div>
 		</header>
 		
