--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-"<"!doctype html>
+<"!doctype html>
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -33,8 +33,8 @@
 			</div>
 			
 			<div id="photo">
-				<img src="images/IMAG0096.jpg" alt="Junting Wu avatar" itemprop="image" height="50%" width="50%"/>
-			</div>
+				<img src="images/IMAG0096.jpg" alt="Junting Wu avatar" itemprop="image" height="75%"
+	                </div>
 		</header>
 		
 		<section id="profile">
