Update web page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div id="photo">
-				<img src="images/IMAG0096.jpg" alt="Junting Wu avatar" itemprop="image" height="75%"
+				<img src="images/IMAG0096.jpg" alt="Junting Wu avatar" itemprop="image" height="250"
 	                </div>
 		</header>
 		
