Update web page

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		
 		<section id="education">
 			<h2>Education 學歷</h2>
-			<p><span itemprop="alumniOf">New Taipei Puqian Elementary School</span></p>
+			<p><span itemprop="alumniOf">New Taipei Puqian Elementary School</span>graduate of 2017</p>
 		</section>
 		
 		<section id="experience">
