Update web page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<header class="clearfix">
 			<div id="info">			
 				<h1><span itemprop="name">Junting Wu</span></h1>
-				<h3><span itemprop="jobTitle">Young Developer Coach Program Leader</span></h3>
+				<h3><span itemprop="jobTitle">A Student Who Is Learning How To Code</span></h3>
 				<small itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 				  <span itemprop="addressLocality">Banqiao</span>, 
 				  <span itemprop="addressRegion">NewTaipei</span>, 
@@ -42,6 +42,10 @@
 			<p itemprop="description"> I'm a 21 year old web designer and developer working out of eastern Massachusetts. I have been coding websites ever since sophomore year of high school in my first web design class. Fast-forward a few years later I was landing freelance projects most of my junior and senior years. During this time I was also working part-time at Best Buy's Geek Squad division.</p>
 			
 			<p>After graduating High School in summer 2009 I started writing on various web design blogs along with launching my own startup ideas. A few months later in September 2009 I spent a couple months studying at <a href="http://www.wpi.edu/">Worcester Polytechnic Institute</a> in Worcester, Massachsuetts. However I left in January 2010 to pursue a career on my own. I now work doing freelance writing and building side-projects in my spare time.</p>
+		</section>
+		<section id="first_project">
+			<h2> My First Project 我的第一個專案</h2>
+			<p>When I was ten, I wrote a project first time. I build a School-Ecological-Park-Search-System for my school. That was my first try, and it was very difficult but that was fun. Therefore, I started my coding life.</p>
 		</section>
 		
 		<section id="skills" class="clearfix" itemscope itemtype="http://schema.org/ItemList">
