Update web page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				  <span itemprop="addressCountry">Taiwan</span>
 				</small>
 				<small><span itemprop="email">Lance20501@gmail.com</span></small>
-				<small><a href="Not Ready" itemprop="url">My blog</a> &bull; <a href="Not Ready" itemprop="url">Facebook</a></small>
+				<small><a href="http://happylittle7.weebly.com" itemprop="url">My blog</a> &bull; <a href="Not Ready" itemprop="url">Facebook</a></small>
 			</div>
 			
 			<div id="photo">
