--- a/chinese.html
+++ b/chinese.html
@@ -21,7 +21,7 @@
 	<div id="w" itemscope itemtype="http://schema.org/Person">
 		<header class="clearfix">
 			<div id="info">			
-				<p>This is happylittle7's profile for Chinese version. <a href="https://happylittle7.github.io" itemprop="url">You can check the English Vvrsion in here.</a></p>
+				<p>This is happylittle7's profile for Chinese version. <a href="https://happylittle7.github.io" itemprop="url">Change to English Version</a></p>
 				<h1><span itemprop="name">Junting Wu</span></h1>
 				<h3><span itemprop="jobTitle">A Student Who Is Learning How To Code</span></h3>
 				<small itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
