--- a/chinese.html
+++ b/chinese.html
@@ -22,15 +22,15 @@
 		<header class="clearfix">
 			<div id="info">			
 				<p>This is happylittle7's profile for Chinese version. <a href="https://happylittle7.github.io" itemprop="url">Change to English Version</a></p>
-				<h1><span itemprop="name">Junting Wu</span></h1>
-				<h3><span itemprop="jobTitle">A Student Who Is Learning How To Code</span></h3>
+				<h1><span itemprop="name">吳俊廷</span></h1>
+				<h3><span itemprop="jobTitle">一位不斷持之以恆學習程式的學生</span></h3>
 				<small itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-				  <span itemprop="addressLocality">Banqiao</span>, 
-				  <span itemprop="addressRegion">NewTaipei</span>, 
-				  <span itemprop="addressCountry">Taiwan</span>
+				  <span itemprop="addressLocality">板橋</span>, 
+				  <span itemprop="addressRegion">新北市</span>, 
+				  <span itemprop="addressCountry">台灣</span>
 				</small>
 				<small><span itemprop="email">Lance20501@gmail.com</span></small>
-				<small><a href="http://happylittle7.weebly.com" itemprop="url">My blog</a> &bull; <a href="Not Ready" itemprop="url">Facebook</a></small>
+				<small><a href="http://happylittle7.weebly.com" itemprop="url">部落格</a> &bull; <a href="Not Ready" itemprop="url">Facebook</a></small>
 				
 			</div>
 			
@@ -61,7 +61,7 @@
 				</ul>
 			</section>
 			<section id="skills-right">
-				<h4 itemprop="about">Boards開發版</h4>
+				<h4 itemprop="about">Boards 開發版</h4>
 				<ul>
 					<li itemprop="itemListElement">Arduino Uno</li>
 					<li itemprop="itemListElement">Arduino Micro</li>
