Fix layout (English)

--- a/chinese.html
+++ b/chinese.html
@@ -21,7 +21,7 @@
 	<div id="w" itemscope itemtype="http://schema.org/Person">
 		<header class="clearfix">
 			<div id="info">			
-				<p>This is happylittle7's profile for Chinese version. <a href="https://happylittle7.github.io" itemprop="url">Change to English Version</a></p>
+				<p>This is my profile for Chinese version. <a href="https://happylittle7.github.io" itemprop="url">Change to English Version</a></p>
 				<h1><span itemprop="name">吳俊廷</span></h1>
 				<h3><span itemprop="jobTitle">一位不斷持之以恆學習程式的學生</span></h3>
 				<small itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
