Fix layout (English)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div id="w" itemscope itemtype="http://schema.org/Person">
 		<header class="clearfix">
 			<div id="info">			
-				<p>這是happylitle7的英文版個人資料頁, <a href="https://happylittle7.github.io/chinese.html" itemprop="url">您可以點擊此處切換至中文</a></p>
+				<p>這是happylitle7的英文版個人資料頁, <a href="/chinese.html" itemprop="url">您可以點擊此處切換至中文</a></p>
 				<h1><span itemprop="name">Junting Wu</span></h1>
 				<h3><span itemprop="jobTitle">A Student Who Is Learning How To Code</span></h3>
 				<small itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
