Add web page (Chinese) & Fix Contence (English)

--- a/chinese.html
+++ b/chinese.html
@@ -72,11 +72,11 @@
 		
 		<section id="education">
 			<h2>Education 學歷</h2>
-			<p><span itemprop="alumniOf">New Taipei Puqian Elementary School </span>graduate of 2017</p>
+			<p><span itemprop="alumniOf">新北市埔墘國民小學</span>畢業於2017年</p>
 		</section>		
 		<section id="projects">
 			<h2>Recent projects 最近作品</h2>
-    	                <p>Watch the ball</p>
+    	                <p>彈幕遊戲:閃避球</p>
     <p data-height="400" data-theme-id="0" data-slug-hash="XBWWaq" data-default-tab="result" data-user="happylittle7" data-embed-version="2" class="codepen">See the Pen <a href="https://codepen.io/happylittle7/pen/XBWWaq"Watch the ball</a> by happylittle7.</p>
 		</section>
 	</div>
