--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</section>		
 		<section id="projects">
 			<h2>Recent projects 最近作品</h2>
-    	                <p>Watch the ball</p>
+    	                <p>Watch out the ball</p>
     <p data-height="400" data-theme-id="0" data-slug-hash="XBWWaq" data-default-tab="result" data-user="happylittle7" data-embed-version="2" class="codepen">See the Pen <a href="https://codepen.io/happylittle7/pen/XBWWaq"Watch the ball</a> by happylittle7.</p>
 		</section>
 	</div>
