Add Page Counter
Chinese

--- a/chinese.html
+++ b/chinese.html
@@ -79,6 +79,21 @@
     	                <p>彈幕遊戲:閃避球</p>
     <p data-height="400" data-theme-id="0" data-slug-hash="XBWWaq" data-default-tab="result" data-user="happylittle7" data-embed-version="2" class="codepen">See the Pen <a href="https://codepen.io/happylittle7/pen/XBWWaq"Watch the ball</a> by happylittle7.</p>
 		</section>
+		<section id="counter">
+			<!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
+			<!-- Histats.com  START  (aync)-->
+			<script type="text/javascript">var _Hasync= _Hasync|| [];
+			_Hasync.push(['Histats.start', '1,4122137,4,107,170,20,00001010']);
+			_Hasync.push(['Histats.fasi', '1']);
+			_Hasync.push(['Histats.track_hits', '']);
+			(function() {
+				var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+				hs.src = ('//s10.histats.com/js15_as.js');
+				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+			})();</script>
+		</section>
+	<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4122137&101" alt="" border="0"></a></noscript>
+	<!-- Histats.com  END  -->
 	</div>
 </body>
 </html>
