Add title & Support full screen on iPad Safari

--- a/board/chinese/index.html
+++ b/board/chinese/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>青春</title>
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link rel="stylesheet" type="text/css" href="css/clock.css"/>
 		<link rel="stylesheet" type="text/css" href="css/spiders.css"/>
 		<style type="text/css">
