Add Safari app icon

--- a/board/chinese/index.html
+++ b/board/chinese/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>青春</title>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<link rel="apple-touch-icon" href="image/icons8-clock-480.png">
 		<link rel="stylesheet" type="text/css" href="css/clock.css"/>
 		<link rel="stylesheet" type="text/css" href="css/spiders.css"/>
 		<style type="text/css">
