--- a/board/chinese/index.html
+++ b/board/chinese/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		
 		<meta charset="UTF-8">
 		<title>青春</title>
 		<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -40,6 +41,7 @@
 		</style>
 	</head>
 	<body onselectstart="return false">
+		
 		<div id="upupoo_bottomLayer">
 			<div id="upupoo_imageLayer">
 				<img src="" id="upupoo_imageLayerImg" alt="" />
@@ -66,5 +68,8 @@
 		var upupoo_imageLayerImg = document.getElementById('upupoo_imageLayerImg');
 			upupoo_imageLayerImg.src = upupooConfig.bgImg;
 	</script>
+	<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto" src="bgm.mp3">
+		你的瀏覽器版本太低，不支援audio標籤
+	</audio>
 	</body>
 </html>
